--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>
     coursera
   </title>
+  <style>body {font-size: 1.3em;}</style>
+  <script src="angular.min.js"></script>
+  <script src="app.js"></script>
 </head>
-<body>
-  <h1>
-    Coursera Projects
-  </h1>
+<body ng-app="NameCalculator">
+  <h1>New Calculator</h1>
+  <div ng-controller="NameCalculatorController">
+    <div>
+      Your Name:
+      <input type="text" ng-model="name" ng-keyup="displayNumeric();">
+    </div>
+    <div>
+      Total numeric value of person's name is: {{totalValue}}
+    </div>
+  </div>
 </body>
 </html>
